fix: se aumento el z-index del carrito y se hizo correciones en responsive

--- a/ecomerce/Client/src/components/sideBarCar/SideBarCar.module.css
+++ b/ecomerce/Client/src/components/sideBarCar/SideBarCar.module.css
@@ -1,7 +1,7 @@
 .sideMenu {
     position: absolute;
     background-color: #F7F7F7;
-    z-index: 500;
+    z-index: 400;
     border-radius: 5% 0 0 5%;
 }
 
@@ -13,7 +13,7 @@
     }
 }
 
-@media only screen and (max-width: 915px) {
+@media only screen and (max-width: 920px) {
 
     .sideMenu {
         top: .5%;
